--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,6 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+#
+GOOGLE_MAPS_API_KEY=AIzaSyAs5Tn9p_X7l5KUHrB7OZc9XDHSwTcE2DE
 
